@@ -22,15 +22,15 @@
 
 <?php if ($forums_defined): ?>
   <div id="forum">
-    <?php if (empty($topics)): ?>
-      <?php // We only want these printed on top on the main forum page ?>
-      <div class="forum-secondary-links clear-block"><?php print $forum_secondary_links ?></div>
-    <?php endif; ?>
-    
-     <?php if ($search): ?>
+    <?php if ($search): ?>
       <div id="search-all-forums"><?php print $search; ?></div>
     <?php endif; ?>
 
+    <?php if (empty($topics)): ?>
+      <?php // We only want these printed on top on the main forum page ?>
+      <div class="forum-secondary-links"><?php print $forum_secondary_links ?></div>
+    <?php endif; ?>
+    
     <?php print $forums; ?>
     
     <?php if (!empty($topics)): ?>
