@@ -6,6 +6,7 @@ July 4, 2009
 ------------
 NOISSUE by Michelle: Moved around the forum legend & link lists to reduce clutter and organize them better on the page.
 #509878 by Michelle: Fixed broken link on 'post reply' with help from marsilainen on IRC.
+NOISSUE by Michelle: Switched order of links div and search div to line them up better on the main forums page.
 
 July 3, 2009
 ------------
